🔧 Fix keywords for crates.io publishing (max 5 allowed)

--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/cloud-shuttle/leptos-next-metadata"
 homepage = "https://github.com/cloud-shuttle/leptos-next-metadata"
 documentation = "https://docs.rs/leptos-next-metadata-macros"
-keywords = ["leptos", "metadata", "macros", "procedural-macros", "rust", "leptos-0.8"]
+keywords = ["leptos", "metadata", "macros", "procedural-macros", "rust"]
 categories = ["web-programming", "asynchronous", "web-framework"]
 readme = "../README.md"
 date = "2025-09-03"
