--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/cloud-shuttle/leptos-next-metadata"
 homepage = "https://github.com/cloud-shuttle/leptos-next-metadata"
 documentation = "https://docs.rs/leptos-next-metadata-macros"
 keywords = ["leptos", "metadata", "macros", "procedural-macros", "rust"]
-categories = ["web-programming", "asynchronous", "web-framework"]
+categories = ["web-programming", "asynchronous"]
 readme = "../README.md"
 date = "2025-09-03"
 
