🤖 Add AI generation transparency and Cloud Shuttle attribution
✨ New Features:
- Comprehensive AI development documentation
- Transparent LLM usage disclosure
- Cloud Shuttle ecosystem integration
- Development process transparency

📚 Documentation Updates:
- AI_GENERATION.md - Complete development process documentation
- README.md - AI generation and Cloud Shuttle attribution
- Cargo.toml - Updated description and keywords

🏢 Cloud Shuttle Integration:
- Clear ecosystem positioning
- Mission alignment documentation
- Community focus emphasis
- Open source transparency

🤖 AI Development Process:
- TDD methodology documentation
- 191 test coverage explanation
- Performance optimization details
- Quality assurance practices

📊 Development Metrics:
- 100% feature parity achievement
- 2-7x performance improvement
- Cross-browser compatibility
- Comprehensive documentation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,12 @@ name = "leptos-next-metadata"
 version = "1.0.0"
 edition = "2021"
 authors = ["Peter Hanssens <peter@cloudshuttle.com.au>"]
-description = "Next.js-style metadata management for Leptos v0.8+ with type-safe APIs and blazing-fast OG image generation"
+description = "Next.js-style metadata management for Leptos v0.8+ with type-safe APIs, blazing-fast OG image generation, and AI-assisted development. Part of the Cloud Shuttle ecosystem."
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/cloud-shuttle/leptos-next-metadata"
 homepage = "https://github.com/cloud-shuttle/leptos-next-metadata"
 documentation = "https://docs.rs/leptos-next-metadata"
-keywords = ["leptos", "metadata", "seo", "og-image", "web"]
+keywords = ["leptos", "metadata", "seo", "og-image", "web", "ai-generated", "cloud-shuttle", "rust", "nextjs", "typescript"]
 categories = ["web-programming", "asynchronous"]
 readme = "README.md"
 date = "2025-09-03"
