--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/cloud-shuttle/leptos-next-metadata"
 homepage = "https://github.com/cloud-shuttle/leptos-next-metadata"
 documentation = "https://docs.rs/leptos-next-metadata"
-keywords = ["leptos", "metadata", "seo", "og-image", "web", "ai-generated", "cloud-shuttle", "rust", "nextjs", "typescript"]
+keywords = ["leptos", "metadata", "seo", "og-image", "web"]
 categories = ["web-programming", "asynchronous"]
 readme = "README.md"
 date = "2025-09-03"
