--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,6 @@ debug = false
 leptos = { version = "0.8", features = ["ssr"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", optional = true }
-tokio = { version = "1.38", features = ["full"] }
 thiserror = "1.0"
 anyhow = "1.0"
 async-trait = "0.1"
@@ -57,13 +56,7 @@ leptos_meta = { version = "0.8", features = ["ssr"] }
 leptos_router = { version = "0.8", features = ["ssr"] }
 leptos-next-metadata-macros = { path = "./macros", version = "1.0.0", optional = true }
 
-# Optional dependencies
-liquid = { version = "0.26", optional = true }
-image = { version = "0.25", optional = true }
-resvg = { version = "0.36", optional = true }
-usvg = { version = "0.36", optional = true }
-tiny-skia = { version = "0.11", optional = true }
-fontdue = { version = "0.8", optional = true }
+# Optional dependencies (server-only)
 mime_guess = { version = "2.0", optional = true }
 walkdir = { version = "2.0", optional = true }
 reqwest = { version = "0.11", optional = true, features = ["json"] }
@@ -82,10 +75,55 @@ proc-macro2 = { version = "1.0", optional = true }
 quote = { version = "1.0", optional = true }
 syn = { version = "2.0", features = ["full"], optional = true }
 
+# WASM-specific dependencies
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2"
+wasm-bindgen-test = "0.3"
+web-sys = { version = "0.3", features = [
+    "console",
+    "Document",
+    "Element",
+    "HtmlElement",
+    "HtmlMetaElement",
+    "HtmlLinkElement",
+    "HtmlCanvasElement",
+    "CanvasRenderingContext2d",
+    "Window",
+    "Storage",
+    "Navigator",
+    "Screen",
+    "Location",
+    "Performance",
+    "Worker",
+    "ServiceWorker",
+    "IntersectionObserver",
+    "ResizeObserver",
+    "Geolocation",
+    "DeviceOrientationEvent",
+    "TouchEvent",
+    "PointerEvent",
+] }
+js-sys = "0.3"
+serde-wasm-bindgen = "0.6"
+base64 = "0.22"
+
+# Server-only dependencies (exclude from WASM)
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tokio = { version = "1.38", features = ["full"], optional = true }
+liquid = { version = "0.26", optional = true }
+image = { version = "0.25", optional = true }
+resvg = { version = "0.36", optional = true }
+usvg = { version = "0.36", optional = true }
+tiny-skia = { version = "0.11", optional = true }
+fontdue = { version = "0.8", optional = true }
+
 [dev-dependencies]
 criterion = "0.5"
 proptest = "1.0"
 mockall = "0.12"
+
+# Server-only dev dependencies
+[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 tokio-test = "0.4"
 tempfile = "3.0"
 axum = "0.7"
@@ -94,7 +132,7 @@ tower-http = { version = "0.5", features = ["fs", "cors"] }
 
 [features]
 default = ["ssr", "og-images", "file-conventions", "macros", "json-ld"]
-ssr = ["leptos/ssr"]
+ssr = ["leptos/ssr", "tokio"]
 csr = ["leptos/csr"]
 hydrate = ["leptos/hydrate"]
 og-images = ["image", "resvg", "usvg", "tiny-skia", "fontdue", "liquid"]
@@ -106,6 +144,13 @@ macros = ["leptos-next-metadata-macros", "proc-macro2", "quote", "syn"]
 debug = []
 api-contracts = ["openapiv3", "validator", "serde_yaml", "axum", "tower"]
 webp-support = ["webp"]
+
+# WASM-specific features
+wasm = ["csr", "json-ld", "macros", "basic-caching"]
+wasm-advanced = ["wasm", "canvas-og-images", "web-storage"]
+basic-caching = []
+canvas-og-images = []
+web-storage = []
 
 [lib]
 name = "leptos_next_metadata"
