--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ debug = false
 leptos = { version = "0.8", features = ["ssr"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", optional = true }
+base64 = "0.22"
 thiserror = "1.0"
 anyhow = "1.0"
 async-trait = "0.1"
