--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ readme = "README.md"
 
 [workspace]
 resolver = "2"
-members = ["macros"]
+members = ["macros", "examples/server_demo", "examples/wasm_demo"]
 
 [profile.dev]
 incremental = true
@@ -52,7 +52,7 @@ chrono = { version = "0.4", features = ["serde"] }
 url = "2.0"
 regex = "1.0"
 urlencoding = "2.1"
-leptos_meta = { version = "0.8", features = ["ssr"] }
+# leptos_meta = { version = "0.8", features = ["ssr"] }  # Replaced by this library
 leptos_router = { version = "0.8", features = ["ssr"] }
 leptos-next-metadata-macros = { path = "./macros", version = "1.5.0", optional = true }
 
