--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "dev:test-server": "cargo run --example basic",
     "dev:watch": "cargo watch -x 'run --example basic'",
     "build:examples": "cargo build --examples",
-    "clean": "cargo clean && rm -rf node_modules"
+    "clean": "cargo clean && rm -rf node_modules",
+    "demo:server": "cd examples/server_demo && cargo run --features ssr",
+    "demo:wasm": "cd examples/wasm_demo && pnpm run start"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.0",
