chore: Update WASM demo and workflow formatting
- Update WASM demo files with latest changes
- Fix formatting in GitHub Actions workflow
- Ensure all demo components are up to date
- Prepare WASM demo for future implementation

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -2,10 +2,10 @@ name: Deploy Demo to GitHub Pages
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths:
-      - 'docs/demo/**'
-      - '.github/workflows/pages.yml'
+      - "docs/demo/**"
+      - ".github/workflows/pages.yml"
   workflow_dispatch:
 
 permissions:
