--- a/examples/wasm_demo/Cargo.toml
+++ b/examples/wasm_demo/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Leptos Next Metadata Team"]
 description = "WASM demo for leptos-next-metadata"
 license = "MIT OR Apache-2.0"
 
-[workspace]
+# [workspace] - removed to avoid multiple workspace roots
 
 [lib]
 crate-type = ["cdylib"]
